--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-pact",
-  "version": "0.4.5",
+  "version": "0.5.0-beta",
   "description": "a pact adaptor for jest",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "test": "jest --coverage",
     "test:ci": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "dist:ci": "npm run lint && npm run test:ci && npm run build && mv dist/index.* .",
-    "dist:local:": "npm run lint && npm run test && npm run build && mv dist/index.* .",
+    "dist:local": "npm run lint && npm run test && npm run build && mv dist/index.* .",
     "deploy:prepare": "./scripts/create_npmrc_file.sh",
     "release": "standard-version",
     "release:dryrun": "npm run test && npm publish --dry-run",
